# hw-kafka-client-consumer-concurrency-problem

./: CHANGELOG.md  README.md  default.nix  hw-kafka-client-consumer-concurrency-problem.cabal
nix/: overrides.nix
src/: HwKafkaClientConsumerConcurrencyProblem.hs
